# rapidtrees

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml  publish-crates.yml  publish-pypi.yml
benches/: memory_time_benchmark.rs
examples/: python_api_example.py
src/: api.rs  bitset.rs  distances.rs  io.rs  lib.rs  main.rs  snapshot.rs
tests/: test_from_newicks.py  test_python_api.py
