[package]
name = "rapidtrees"
version = "0.2.2"
edition = "2024"

[lib]
name = "rapidtrees"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "rapidtrees"
path = "src/main.rs"
required-features = []

[dependencies]
phylotree="0.1.3"
pyo3 = { version = "0.27.1", features = ["extension-module"], optional = true }
rayon = "1"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
itertools = "0.14.0"
rustc-hash = "2.1"

[features]
default = []
python = ["pyo3"]
