[package]
name = "rapidtrees"
version = "0.3.0"
edition = "2024"
description = "Fast pairwise tree distance calculations (Robinson-Foulds, Weighted RF, Kuhner-Felsenstein) for phylogenetic trees"
license = "MIT"
repository = "https://github.com/Joon-Klaps/rapidtrees"
homepage = "https://github.com/Joon-Klaps/rapidtrees"
readme = "README.md"
keywords = ["phylogenetics", "tree-distance", "robinson-foulds", "bioinformatics"]
categories = ["science", "command-line-utilities"]

[lib]
name = "rapidtrees"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "rapidtrees"
path = "src/main.rs"
required-features = []

[dependencies]
phylotree="0.1.3"
pyo3 = { version = "0.27.1", features = ["extension-module"], optional = true }
rayon = "1"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
itertools = "0.14.0"
rustc-hash = "2.1"

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
rand = "0.9.2"
criterion = "0.7.0"
cpu-time = "1.0.0"
memory-stats = "1.0.0"

[[bench]]
name = "memory_time_benchmark"
harness = false
